move all native vars to a String envp[] to set the exec environment variables